--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
